# model-card-studio

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
assets/: README.txt
docs/: index.html
src/: data.py  limitations.py  metrics.py  model.py  plots.py
tests/: __init__.py  test_data_model.py  test_limitations.py  test_metrics.py  test_plots.py
