[project]
name = "model-card-studio"
version = "0.1.0"
description = "分類モデルの評価をモデルカード形式で見せる公開用小型アプリ（sklearn/合成データ）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
